Notes needed in Markdown

--- a/reveal.html
+++ b/reveal.html
@@ -19,7 +19,10 @@
     <div class="slides">
 
         <!-- Use external markdown resource, separate slides by three newlines; vertical slides by two newlines -->
-        <section data-markdown="de/WP_Templates.md" data-separator="^\n\n\n" data-vertical="^\n\n"></section>
+        <section data-markdown="de/WP_Templates.md"
+                 data-separator="^\n\n\n"
+                 data-vertical="^\n\n"
+                 data-notes="^Note\:"></section>
 
     </div>
 </div>
