Presentation about working with GIT

--- a/code-x.html
+++ b/code-x.html
@@ -31,7 +31,7 @@
     <div class="slides">
 
         <!-- Use external markdown resource, separate slides by three newlines; vertical slides by two newlines -->
-        <section data-markdown="de/WP_Templates.md"
+        <section data-markdown="de/GIT_Roundtrip.md"
                  data-separator="^\n\n\n"
                  data-vertical="^\n\n"
                  data-notes="^Note\:"></section>
