--- a/reveal.html
+++ b/reveal.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="reveal.js/css/theme/sky.css" id="theme">
 
     <link rel="stylesheet" href="reveal.js/lib/css/zenburn.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
+    <style type="text/css">
+        .reveal i[class*=fa] {
+            font-family: 'FontAwesome';
+            font-style: normal;
+            font-size: 5em;
+            line-height: 1em;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,10 +29,10 @@
     <div class="slides">
 
         <!-- Use external markdown resource, separate slides by three newlines; vertical slides by two newlines -->
-        <section data-markdown="de/WP_Templates.md"
+        <section data-markdown="de/WP_46.md"
                  data-separator="^\n\n\n"
                  data-vertical="^\n\n"
-                 data-notes="^Note\:"></section>
+                 data-notes="^  [A-Z]{2,}"></section>
 
     </div>
 </div>
